The script now can fully create a production environment, deploy the project and update it

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -16,7 +16,7 @@ server {
 
     location /static {
         autoindex on;
-        alias            %(application_path)s/static;
+        alias            %(application_path)scollected_static;
         log_not_found   on;
     }
 
