--- a/templates/supervisor.conf
+++ b/templates/supervisor.conf
@@ -1,5 +1,15 @@
+[program:rabbitmq]
+command:rabbitmq-server
+tdout_logfile=/var/log/rabbitmq.log
+stderr_logfile=/var/log/rabbitmq.log
+autostart=true
+autorestart=true
+startsecs=10
+
+priority=999
+
 [group:%(project_name)s]
-programs=gunicorn
+programs=gunicorn,celery
 
 [program:gunicorn]
 command=%(project_path)s/env/bin/gunicorn_django -c gunicorn.conf.py -p gunicorn.pid
@@ -8,3 +18,22 @@ user=%(user)s
 autostart=true
 autorestart=true
 redirect_stderr=true
+
+[program:celery]
+command=%(project_path)s/env/bin/python manage.py celery worker -B -S djcelery.schedulers.DatabaseScheduler --loglevel=INFO
+directory=%(project_path)s
+user=ubuntu
+numprocs=1
+stdout_logfile=/var/log/celeryd.log
+stderr_logfile=/var/log/celeryd.log
+autostart=true
+autorestart=true
+startsecs=10
+
+; Need to wait for currently executing tasks to finish at shutdown.
+; Increase this if you have very long running tasks.
+stopwaitsecs = 600
+
+; if rabbitmq is supervised, set its priority higher
+; so it starts first
+priority=998
